open subsonic api support - intermediate